# Omni-Director

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_WORK_PLAN.md  DEPLOYMENT.md  Dockerfile  HACKATHON_RULES.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_CHECKLIST.md  PRODUCTION_READY.md  README.md  SETUP.md  SUBMISSION_PLAN.md  deploy.sh  docker-compose.yml  health_check.sh  logs-adariumesh-omni-director-main-streamlit_app.py-2025-12-15T21_17_27.904Z.txt  nginx.conf  pyproject.toml  requirements.txt  streamlit_app.py  test_brand_guidelines.py  test_brand_watermark.py  test_export_engine.py
.claude/: MEMORY.md  settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: BRAND_PROTECTION_README.md  EXPORT_ENGINE_README.md  demo_brand_protection.py  requirements.txt
backend/app/: __init__.py  config.py  database_migration.py  main.py
backend/data/: omni_director.db
backend/orchestrator/: agent_coordinator.py  agent_launcher.py
data/: omni_director.db
frontend/: requirements.txt
frontend/app/: .gitignore  __init__.py  config.py  main.py
schemas/: bria_request.schema.json  database.sql
scripts/: production_setup.sh  run_backend.sh  run_frontend.sh  run_tests.sh  setup.sh
ssl/: .gitignore
tests/: conftest.py
tests/backend/: test_api_endpoints.py  test_brand_protection.py  test_bria_client.py  test_bria_research.py  test_database.py  test_export_engine_fixed.py  test_export_engine_integration.py  test_export_simple.py  test_file_storage.py  test_integration.py  test_integration_brand_export.py  test_matrix_engine.py  (+1 more)
(+47 files in other folders)
